--- a/tests/Dockerfile.server
+++ b/tests/Dockerfile.server
@@ -14,13 +14,15 @@ RUN touch exports && \
 
 # create some files and directories for testing purposes
 RUN touch /nfs_share/test_file.txt && \
-    echo "test_content" >> /nfs_share/test_file.txt
+    echo -n "test_content" >> /nfs_share/test_file.txt
 RUN touch /nfs_share/a.txt && \
-    echo "a" >> /nfs_share/a.txt
+    echo -n "a" >> /nfs_share/a.txt
+RUN touch /nfs_share/large_file.txt && \
+    dd if=/dev/zero of=/nfs_share/large_file.txt bs=10000 count=1
 
 RUN mkdir /nfs_share/write_test
 RUN touch /nfs_share/write_test/write_test_file.txt && \
-    echo "write_test_content" >> /nfs_share/write_test/write_test_file.txt
+    echo -n "write_test_content" >> /nfs_share/write_test/write_test_file.txt
 
 RUN mkdir /nfs_share/create_test
 RUN touch /nfs_share/create_test/existing_file.txt
