--- a/tests/Dockerfile.server
+++ b/tests/Dockerfile.server
@@ -27,6 +27,9 @@ RUN touch /nfs_share/write_test/write_test_file.txt && \
 RUN mkdir /nfs_share/create_test
 RUN touch /nfs_share/create_test/existing_file.txt
 
+RUN mkdir /nfs_share/mkdir_test
+RUN touch /nfs_share/mkdir_test/existing_directory
+
 RUN mkdir -p /existent_but_non_exported_directory
 
 RUN chmod +x ./build/mount_and_nfs_server
