--- a/tests/Dockerfile.server
+++ b/tests/Dockerfile.server
@@ -27,6 +27,9 @@ RUN touch /nfs_share/write_test/write_test_file.txt && \
 RUN mkdir /nfs_share/create_test
 RUN touch /nfs_share/create_test/existing_file.txt
 
+RUN mkdir /nfs_share/remove_test
+RUN touch /nfs_share/remove_test/remove_test_file.txt
+
 RUN mkdir /nfs_share/mkdir_test
 RUN touch /nfs_share/mkdir_test/existing_directory
 
